--- a/apps/search-admin.html
+++ b/apps/search-admin.html
@@ -443,16 +443,16 @@
     <div class="gem-c-summary__block"></div>
 </div>
 <h2 id='example-pages-published-by-search-admin'>Example pages published by search-admin</h2><p><ul class="gem-c-list govuk-list">
-      <li><a href="http://www.dorsetforyou.com/weymouthandportland" class="govuk-link">Weymouth and Portland Borough Council</a></li>
-      <li><a href="http://www.caerphilly.gov.uk" class="govuk-link">Caerphilly County Borough Council</a></li>
-      <li><a href="http://www.huntsdc.gov.uk" class="govuk-link">Huntingdonshire District Council</a></li>
-      <li><a href="http://www.birmingham.gov.uk" class="govuk-link">Birmingham City Council</a></li>
-      <li><a href="http://www.calderdale.gov.uk" class="govuk-link">Calderdale Metropolitan Borough Council</a></li>
+      <li><a href="http://www.oxfordshire.gov.uk/" class="govuk-link">Oxfordshire County Council</a></li>
+      <li><a href="http://www.downdc.gov.uk" class="govuk-link">Down District Council</a></li>
       <li><a href="http://www.chorley.gov.uk" class="govuk-link">Chorley Borough Council</a></li>
-      <li><a href="http://www.cravendc.gov.uk" class="govuk-link">Craven District Council</a></li>
       <li><a href="http://www.bromsgrove.gov.uk" class="govuk-link">Bromsgrove District Council</a></li>
       <li><a href="http://www.reigate-banstead.gov.uk/" class="govuk-link">Reigate and Banstead Borough Council</a></li>
-      <li><a href="http://www.antrim.gov.uk/" class="govuk-link">Antrim Borough Council</a></li>
+      <li><a href="http://www.lewes-eastbourne.gov.uk" class="govuk-link">Eastbourne Borough Council</a></li>
+      <li><a href="http://www.dorsetforyou.com/east" class="govuk-link">East Dorset District Council</a></li>
+      <li><a href="http://www.ryedale.gov.uk" class="govuk-link">Ryedale District Council</a></li>
+      <li><a href="http://www.sheffield.gov.uk" class="govuk-link">Sheffield City Council</a></li>
+      <li><a href="http://www.dorsetforyou.com/weymouthandportland" class="govuk-link">Weymouth and Portland Borough Council</a></li>
 </ul></p>
 <h2 id='readme'>README</h2><p><div class="embedded-readme"></p>
 
