--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -359,16 +359,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.dorsetforyou.com/weymouthandportland">Weymouth and Portland Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.caerphilly.gov.uk">Caerphilly County Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.huntsdc.gov.uk">Huntingdonshire District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.birmingham.gov.uk">Birmingham City Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.calderdale.gov.uk">Calderdale Metropolitan Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.chorley.gov.uk">Chorley Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.cravendc.gov.uk">Craven District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.bromsgrove.gov.uk">Bromsgrove District Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.reigate-banstead.gov.uk/">Reigate and Banstead Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.antrim.gov.uk/">Antrim Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.newark-sherwooddc.gov.uk">Newark and Sherwood District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.oxford.gov.uk">Oxford City Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.derbyshire.gov.uk">Derbyshire County Council</a></li>
+<li><a href="https://www.gov.ukhttps//nationalcareersservice.direct.gov.uk/advice/courses/">Courses and learning - National Careers Service</a></li>
+<li><a href="https://www.gov.ukhttp//www.aylesburyvaledc.gov.uk/">Aylesbury Vale District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.darlington.gov.uk">Darlington Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.kingston.gov.uk/">Royal Borough of Kingston upon Thames Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.oadby-wigston.gov.uk">Oadby and Wigston Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.maidstone.gov.uk/">Maidstone Borough Council</a></li>
+<li><a href="https://www.gov.ukhttps//nationalcareersservice.direct.gov.uk/advice/getajob/cvs/">Write your CV - National Careers Service</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
