--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/197760.ar">السفير البريطاني في لبنان: آمل أن يغير حزب الله اتجاهه عن مصالح إيران والأسد</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/new-zealand-united-kingdom-joint-statement-on-cyber-security">New Zealand - United Kingdom Joint Statement on Cyber Security </a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/226373.pt">Declaração dos Líderes do G-7 sobre a Ucrânia</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/royal-baby-pm-statement">Royal baby: PM statement</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/231664.es-419">Red social de salud más importante de Europa llega a Chile</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/high-commissioners-blog">High Commissioner’s Blog</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/175060.zh-tw">英國貿易文化辦事處在台成立20週年，致力推動台英雙邊關係</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/jeremy-hunt-meets-japanese-pm-amid-life-sciences-week">Jeremy Hunt meets Japanese PM amid Life Sciences Week </a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/242260.pt">Concurso cultural: Passion for Fashion</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/188483.pt">Fórum Live Experience debate novas tendências em mega eventos</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/business-secretary-visits-recife-to-strengthen-education-ties--2">Business Secretary visits Recife to strengthen education ties</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--35">TURKS AND CAICOS POST CABINET MEETING STATEMENT</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-in-morocco-celebrates-queens-birthday--2">British Embassy in Morocco celebrates Queen’s Birthday</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/225603.pt">Ampliando a cooperação entre Brasil e Reino Unido</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-delegation-announces-its-2013-industry-day-the-future-of-nato-business--2">UK Delegation announces its 2013 Industry Day: The Future of NATO Business</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/211747.bg">Дейвид Лидингтън оцени високо спасяването на българските евреи</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--40">Turks and Caicos Post Cabinet Meeting Statement</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/286041.es-419">Se presentó la 5ta edición del Festival Shakespeare Buenos Aires en la Residencia del Embajador Británico en Argentina</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/207015.pt">Campanha GREAT apresenta evento sobre Engenharia Automobilistica</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/296968.zh-tw">英國簽證網路說明會</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
