--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/thirtieth-session-of-the-human-rights-council-geneva-14-september-to-2-october-2015--5">Thirtieth Session of the Human Rights Council, Geneva, 14 September to 2 October 2015</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/changes-to-passport-services-for-british-nationals--5">Changes to passport services for British nationals</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--5">Advice for British nationals in Chennai</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/fintech-week-2016-report-finds-britain-to-be-the-worlds-leading-fintech-centre">Fintech Week 2016: report finds Britain to be the world&rsquo;s leading FinTech centre</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/applications-for-201415-chevening-scholarships-now-open--2">Applications for 2014/15 Chevening Scholarships now open</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/284721.es-419">British Council y Ministerio de Educación inician Escuela de Verano para capacitar a 400 profesores peruanos de inglés</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/215578.es-419">LSE visitará Quito, Guayaquil y Cuenca en Febrero</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/william-hague-and-angelina-jolie-visit-rwanda">William Hague and Angelina Jolie visit Rwanda</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/telephone-lines-out-of-order-at-the-british-embassy-in-havana">Telephone connection restored at the British Embassy in Havana</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/uk-visa-application-centre-changes-location--2">UK Visa Application Centre changes location</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/business-secretary-visits-recife-to-strengthen-education-ties--2">Business Secretary visits Recife to strengthen education ties</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--35">TURKS AND CAICOS POST CABINET MEETING STATEMENT</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-in-morocco-celebrates-queens-birthday--2">British Embassy in Morocco celebrates Queen’s Birthday</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/225603.pt">Ampliando a cooperação entre Brasil e Reino Unido</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-delegation-announces-its-2013-industry-day-the-future-of-nato-business--2">UK Delegation announces its 2013 Industry Day: The Future of NATO Business</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/211747.bg">Дейвид Лидингтън оцени високо спасяването на българските евреи</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--40">Turks and Caicos Post Cabinet Meeting Statement</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/286041.es-419">Se presentó la 5ta edición del Festival Shakespeare Buenos Aires en la Residencia del Embajador Británico en Argentina</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/207015.pt">Campanha GREAT apresenta evento sobre Engenharia Automobilistica</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/296968.zh-tw">英國簽證網路說明會</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
