--- a/apps/static/slimmer_templates.html
+++ b/apps/static/slimmer_templates.html
@@ -364,14 +364,14 @@
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/static/commit/d0e8e5f67aca06fce585e2805fdeaad5b474d9b2">30 Mar 2021</a>
+  Last updated: <a href="https://github.com/alphagov/static/commit/449cd6f7942472dbc7abdfae9cd705ebf60de144">16 Jun 2021</a>
 </div>
 
   <h1 class="page-title">static: Slimmer Templates</h1>
 
   
 <h2 id="gem_layout"><code>gem_layout</code></h2>
-<p>This template uses the <a href="https://components.publishing.service.gov.uk/component-guide/layout_for_public">public layout component</a> from the GOV.UK Publishing Components gem. It supplies the header and footer only - this includes the cookie banner, skip to content link, header bar, emergency banner, survery banner, global bar, feedback, and footer. The content is constrained and centred.</p>
+<p>This template uses the <a href="https://components.publishing.service.gov.uk/component-guide/layout_for_public">public layout component</a> from the GOV.UK Publishing Components gem. It supplies the header and footer only - this includes the cookie banner, skip to content link, header bar, emergency banner, survey banner, global bar, feedback, and footer. The content is constrained and centred.</p>
 <h2 id="gem_layout_full_width"><code>gem_layout_full_width</code></h2>
 <p>This is the same as the <code>gem_layout</code> template, except that this layout <strong>doesn't</strong> constrain and centre the content to the same width as the GOV.UK header.</p>
 <p>Use this layout if you want to have full width content - such as the blue welcome bar on the GOV.UK homepage.</p>
